--- a/frontend/scss/_sidebar.scss
+++ b/frontend/scss/_sidebar.scss
@@ -73,7 +73,7 @@
       padding-right: 0;
 
       .arrow {
-        display: none;
+        display: none !important;
       }
     }
   }
